# amostutorial

./: Cargo.toml  Dockerfile  Dockerfile.flake  Makefile  README.md  flake.nix  result  shell.nix
src/: main.rs
