[package]
name = "amostutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "1", default-features = false }
axum = "0.6.20"
color-eyre = "0.6"
image = "0.24"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
lto = true # Enable link-time optimization
